force-app/main/default/objects/Case/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia</label>
    <referenceTo>Agencia__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>