force-app/main/default/objects/Case/fields/Apellido_Usuario_Firmador__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Usuario_Firmador__c</fullName>
    <label>Apellido Usuario Firmador</label>
    <length>80</length>
    <type>Text</type>
</CustomField>