force-app/main/default/objects/Case/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <label>Apellido</label>
    <length>254</length>
    <type>Text</type>
</CustomField>