force-app/main/default/objects/Case/fields/Aplica_Saldo_patronal__c.field-meta.xml
<CustomField>
    <fullName>Aplica_Saldo_patronal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Saldo patronal</label>
    <type>Checkbox</type>
</CustomField>