force-app/main/default/objects/Case/fields/AprobacionBeneficiarios__c.field-meta.xml
<CustomField>
    <fullName>AprobacionBeneficiarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación Beneficiarios</label>
    <type>Checkbox</type>
</CustomField>