force-app/main/default/objects/Case/fields/Aprueba_SAC__c.field-meta.xml
<CustomField>
    <fullName>Aprueba_SAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprueba SAC</label>
    <type>Checkbox</type>
</CustomField>