force-app/main/default/objects/Case/fields/Archivo_Adjunto__c.field-meta.xml
<CustomField>
    <fullName>Archivo_Adjunto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archivo Adjunto</label>
    <type>Checkbox</type>
</CustomField>