force-app/main/default/objects/Case/fields/Asunto_hoy__c.field-meta.xml
<CustomField>
    <fullName>Asunto_hoy__c</fullName>
    <formula>IF(RecordType.Name &lt;&gt; &quot;Otros&quot;,SUBSTITUTE(SUBSTITUTE(RecordType.Name, &quot;de&quot;, &quot;&quot;),&quot;  &quot;,&quot; &quot;)  , text(FPC_Asunto__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asunto hoy</label>
    <type>Text</type>
</CustomField>