force-app/main/default/objects/Case/fields/Cargo_actual__c.field-meta.xml
<CustomField>
    <fullName>Cargo_actual__c</fullName>
    <label>Cargo actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>