force-app/main/default/objects/Case/fields/Cargo_Usuario_Firmador__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Usuario_Firmador__c</fullName>
    <label>Cargo Usuario Firmador</label>
    <length>80</length>
    <type>Text</type>
</CustomField>