force-app/main/default/objects/Case/fields/Caso_Ingresado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Ingresado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera para validar envío de Email cuando se ingresa la gestión y se asigna a un Asesor.</description>
    <inlineHelpText>Bandera para validar envío de Email cuando se ingresa la gestión y se asigna a un Asesor.</inlineHelpText>
    <label>Caso Ingresado Email2Case</label>
    <type>Checkbox</type>
</CustomField>