force-app/main/default/objects/Case/fields/Caso_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Rechazado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Segundo rechazo caso de Actualización de Información</description>
    <inlineHelpText>Segundo rechazo caso de Actualización de Información</inlineHelpText>
    <label>Caso Rechazado</label>
    <type>Checkbox</type>
</CustomField>