force-app/main/default/objects/Case/fields/Caso_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Caso_Retiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Retiro</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>