force-app/main/default/objects/Case/fields/Cerrado_sin_cambios__c.field-meta.xml
<CustomField>
    <fullName>Cerrado_sin_cambios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cerrado sin cambios</label>
    <type>Checkbox</type>
</CustomField>