force-app/main/default/objects/Case/fields/CerrarCasoJob__c.field-meta.xml
<CustomField>
    <fullName>CerrarCasoJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cerrar Caso con Job</label>
    <type>Checkbox</type>
</CustomField>