force-app/main/default/objects/Case/fields/Codigo_barra__c.field-meta.xml
<CustomField>
    <fullName>Codigo_barra__c</fullName>
    <label>Código de barra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>