force-app/main/default/objects/Case/fields/Codigo_empleado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_empleado__c</fullName>
    <label>Codigo empleado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>