force-app/main/default/objects/Case/fields/Colonia_Avenida_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Avenida_Residencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia/Avenida Residencia</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>