force-app/main/default/objects/Case/fields/Colonia_Avenida_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Avenida_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia/Avenida Trabajo</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Casos (Colonia/Avenida Trabajo)</relationshipLabel>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>