force-app/main/default/objects/Case/fields/Constancia__c.field-meta.xml
<CustomField>
    <fullName>Constancia__c</fullName>
    <label>Constancia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constancia</valueSetName>
    </valueSet>
</CustomField>