force-app/main/default/objects/Case/fields/Contenido_a_Sysde_Esperando_Docu__c.field-meta.xml
<CustomField>
    <fullName>Contenido_a_Sysde_Esperando_Docu__c</fullName>
    <label>Contenido a Sysde Esperando Docu</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>