force-app/main/default/objects/Case/fields/Contenido_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Contenido_Sysde__c</fullName>
    <label>Contenido a Sysde</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>