force-app/main/default/objects/Case/fields/Correo_electronico_empleado__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_empleado__c</fullName>
    <label>Correo Electronico Empleado</label>
    <type>Email</type>
</CustomField>