force-app/main/default/objects/Case/fields/CreadoFormaMasiva__c.field-meta.xml
<CustomField>
    <fullName>CreadoFormaMasiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado forma Masiva?</label>
    <type>Checkbox</type>
</CustomField>