force-app/main/default/objects/Case/fields/Cuentas_seleccionada__c.field-meta.xml
<CustomField>
    <fullName>Cuentas_seleccionada__c</fullName>
    <label>Cuentas seleccionada</label>
    <summaryForeignKey>Detalle_caso__c.Caso__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>