force-app/main/default/objects/Case/fields/DAU_Identidad__c.field-meta.xml
<CustomField>
    <fullName>DAU_Identidad__c</fullName>
    <description>Identidad que devuelve el servicio de consulta.</description>
    <inlineHelpText>Identidad que devuelve el servicio de consulta.</inlineHelpText>
    <label>DAU_Identidad</label>
    <type>TextArea</type>
</CustomField>