force-app/main/default/objects/Case/fields/DAU_llamarSalesforceTarjeta__c.field-meta.xml
<CustomField>
    <fullName>DAU_llamarSalesforceTarjeta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera para ejecutar el servicio de Salesforce Tarjeta.</description>
    <inlineHelpText>Bandera para ejecutar el servicio de Salesforce Tarjeta.</inlineHelpText>
    <label>DAU_llamarSalesforceTarjeta</label>
    <type>Checkbox</type>
</CustomField>