force-app/main/default/objects/Case/fields/DAU_No_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>DAU_No_Cuenta__c</fullName>
    <description>Número de cuenta que devuelve el servicio de validación de Identidad.</description>
    <inlineHelpText>Número de cuenta que devuelve el servicio de validación de Identidad.</inlineHelpText>
    <label>DAU_No.Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>