force-app/main/default/objects/Case/fields/DAU_Tarjeta_de_Sysde__c.field-meta.xml
<CustomField>
    <fullName>DAU_Tarjeta_de_Sysde__c</fullName>
    <description>Número de tarjeta de devuelve el servicio que consulta a Sysde.</description>
    <inlineHelpText>Número de tarjeta de devuelve el servicio que consulta a Sysde.</inlineHelpText>
    <label>DAU_Tarjeta de Sysde</label>
    <length>50</length>
    <type>Text</type>
</CustomField>