force-app/main/default/objects/Case/fields/Desde_sitio_externo__c.field-meta.xml
<CustomField>
    <fullName>Desde_sitio_externo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desde sitio externo</label>
    <type>Checkbox</type>
</CustomField>