force-app/main/default/objects/Case/fields/Desea_ver_tasa_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Desea_ver_tasa_de_cambio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desea ver tasa de cambio</label>
    <type>Checkbox</type>
</CustomField>