force-app/main/default/objects/Case/fields/Ejecutar_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Ejecutar_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera para actualizar el caso para que se reejecute algún proceso.</description>
    <inlineHelpText>Bandera para actualizar el caso para que se reejecute algún proceso.</inlineHelpText>
    <label>Ejecutar Trigger</label>
    <type>Checkbox</type>
</CustomField>