force-app/main/default/objects/Case/fields/Embajadas__c.field-meta.xml
<CustomField>
    <fullName>Embajadas__c</fullName>
    <label>Embajadas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Constancia__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consulado de Belice</fullName>
            </value>
            <value>
                <fullName>Consulado de Canadá</fullName>
            </value>
            <value>
                <fullName>Consulado de Holanda-Países Bajos</fullName>
            </value>
            <value>
                <fullName>Consulado de Noruega</fullName>
            </value>
            <value>
                <fullName>Consulado de Portugal</fullName>
            </value>
            <value>
                <fullName>Consulado de Tailandia</fullName>
            </value>
            <value>
                <fullName>Embajada de Alemania</fullName>
            </value>
            <value>
                <fullName>Embajada de Argentina</fullName>
            </value>
            <value>
                <fullName>Embajada de Brasil</fullName>
            </value>
            <value>
                <fullName>Embajada de Chile</fullName>
            </value>
            <value>
                <fullName>Embajada de China</fullName>
            </value>
            <value>
                <fullName>Embajada de Colombia</fullName>
            </value>
            <value>
                <fullName>Embajada de Costa Rica</fullName>
            </value>
            <value>
                <fullName>Embajada de Cuba</fullName>
            </value>
            <value>
                <fullName>Embajada de Ecuador</fullName>
            </value>
            <value>
                <fullName>Embajada de El Salvador</fullName>
            </value>
            <value>
                <fullName>Embajada de España</fullName>
            </value>
            <value>
                <fullName>Embajada de Francia</fullName>
            </value>
            <value>
                <fullName>Embajada de Guatemala</fullName>
            </value>
            <value>
                <fullName>Embajada de Italia</fullName>
            </value>
            <value>
                <fullName>Embajada de la Rep. Dominicana</fullName>
            </value>
            <value>
                <fullName>Embajada de La Santa Sede</fullName>
            </value>
            <value>
                <fullName>Embajada de la Soberana Orden Militar Hospitalaria de Malta</fullName>
            </value>
            <value>
                <fullName>Embajada del Japón</fullName>
            </value>
            <value>
                <fullName>Embajada de los Estados Unidos de América (USA)</fullName>
            </value>
            <value>
                <fullName>Embajada de México</fullName>
            </value>
            <value>
                <fullName>Embajada de Nicaragua</fullName>
            </value>
            <value>
                <fullName>Embajada de Panamá</fullName>
            </value>
            <value>
                <fullName>Embajada de Perú</fullName>
            </value>
            <value>
                <fullName>Embajada de Suecia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>