force-app/main/default/objects/Case/fields/Enviar_a_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Enviar_a_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a aprobación</label>
    <type>Checkbox</type>
</CustomField>