force-app/main/default/objects/Case/fields/Enviar_aprobacion_AD__c.field-meta.xml
<CustomField>
    <fullName>Enviar_aprobacion_AD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar aprobacion A&amp;D</label>
    <type>Checkbox</type>
</CustomField>