force-app/main/default/objects/Case/fields/Enviar_aprobacion_automatica__c.field-meta.xml
<CustomField>
    <fullName>Enviar_aprobacion_automatica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar aprobacion automatica</label>
    <type>Checkbox</type>
</CustomField>