force-app/main/default/objects/Case/fields/EnviarEDCPorCorreo__c.field-meta.xml
<CustomField>
    <fullName>EnviarEDCPorCorreo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enviar EDC por Correo?</label>
    <type>Checkbox</type>
</CustomField>