force-app/main/default/objects/Case/fields/Es_OSR__c.field-meta.xml
<CustomField>
    <fullName>Es_OSR__c</fullName>
    <formula>/*IF(AND(RecordType.Name==&apos;Actualización de Información&apos;,Nombre_Cliente__c!=null,Segundo_nombre__c!=null,Apellidos__c!=null,Segundo_apellido__c!=null,TEXT(Tipo_Identificacion__c)!=null,Identificacion__c!=null,TEXT(Sexo__c)!=null,Fecha_Nacimiento__c!=null),FALSE,IF(AND(RecordType.Name==&apos;Cambio de Subproducto&apos;,Cuentas_seleccionada__c&gt;0,Aprobado__c==false),FALSE,IF(AND(RecordType.Name==&apos;Cambio de Subproducto&apos;,Aprobado__c==false,Enviar_a_aprobacion__c==true),FALSE,IF(AND(RecordType.Name==&apos;Constancia&apos;,TEXT(Constancia__c)==&apos;A6&apos;,Monto_compromiso_aporte__c&gt;0),FALSE,IF(AND(RecordType.Name==&apos;Modificación de aportes&apos;,Enviar_aprobacion_AD__c==true,Aprobado__c==false),FALSE,IF(AND(RecordType.Name==&apos;Retiros&apos;),FALSE,IF(AND(RecordType.Name==&apos;Reversiones&apos;,Aprobado__c==false),FALSE,TRUE)))))))*/

IF(AND(RecordType.Name==&apos;Actualización de Información&apos;,Nombre_Cliente__c!=null,Segundo_nombre__c!=null,Apellidos__c!=null,Segundo_apellido__c!=null,TEXT(Tipo_Identificacion__c)!=null,Identificacion__c!=null,TEXT(Sexo__c)!=null,Fecha_Nacimiento__c!=null),FALSE,IF(AND(RecordType.Name==&apos;Cambio de Subproducto&apos;,Cuentas_seleccionada__c&gt;0,Aprobado__c==false),FALSE,IF(AND(RecordType.Name==&apos;Cambio de Subproducto&apos;,Aprobado__c==false,Enviar_a_aprobacion__c==true),FALSE,IF(AND(RecordType.Name==&apos;Constancia&apos;,TEXT(Constancia__c)==&apos;A6&apos;,Monto_compromiso_aporte__c&gt;0),FALSE,IF(AND(RecordType.Name==&apos;Modificación de aportes&apos;,Enviar_aprobacion_AD__c==true,Aprobado__c==false),FALSE,IF(AND(RecordType.Name==&apos;Retiros&apos;),FALSE,IF(AND(RecordType.Name==&apos;Reversiones&apos;,Aprobado__c==false),FALSE,IF(DAU_aprobacion__c = TRUE,FALSE,TRUE))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es OSR?</label>
    <type>Checkbox</type>
</CustomField>