force-app/main/default/objects/Case/fields/Es_primer_prestamo__c.field-meta.xml
<CustomField>
    <fullName>Es_primer_prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validar desde el detalle del caso de Pignoración si es primer préstamo.</description>
    <inlineHelpText>Validar desde el detalle del caso de Pignoración si es primer préstamo.</inlineHelpText>
    <label>¿Es primer préstamo?</label>
    <type>Checkbox</type>
</CustomField>