force-app/main/default/objects/Case/fields/Es_Refinanciamiento__c.field-meta.xml
<CustomField>
    <fullName>Es_Refinanciamiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es Refinanciamiento?</label>
    <type>Checkbox</type>
</CustomField>