force-app/main/default/objects/Case/fields/EsRetiros__c.field-meta.xml
<CustomField>
    <fullName>EsRetiros__c</fullName>
    <formula>IF(RecordType.Name = &apos;Retiros&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Retiros?</label>
    <type>Checkbox</type>
</CustomField>