force-app/main/default/objects/Case/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Soltero/a</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Casado/a</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Divorciado/a</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Viudo/a</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unión Libre</label>
            </value>
            <value>
                <fullName>Comprometido/a</fullName>
                <isActive>false</isActive>
                <label>Comprometido/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>