force-app/main/default/objects/Case/fields/Estado_Cuenta_Detallado__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cuenta_Detallado__c</fullName>
    <label>Estado de Cuenta Detallado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Estado_Cuenta__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Historico</fullName>
            </value>
            <value>
                <fullName>A1.1</fullName>
                <isActive>false</isActive>
                <label>A1.1</label>
            </value>
            <value>
                <fullName>A1.2</fullName>
                <isActive>false</isActive>
                <label>A1.2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>