force-app/main/default/objects/Case/fields/Estado_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cuenta__c</fullName>
    <label>Estado_de_Cuenta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>