force-app/main/default/objects/Case/fields/Estado_de_Cuenta_Historico__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cuenta_Historico__c</fullName>
    <label>Estado de Cuenta Historico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>