force-app/main/default/objects/Case/fields/Exoneraciones_aprobadas__c.field-meta.xml
<CustomField>
    <fullName>Exoneraciones_aprobadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exoneraciones aprobadas</label>
    <type>Checkbox</type>
</CustomField>