force-app/main/default/objects/Case/fields/Fecha_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso__c</fullName>
    <label>Fecha de Ingreso</label>
    <type>Date</type>
</CustomField>