force-app/main/default/objects/Case/fields/Fecha_salida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_salida__c</fullName>
    <label>Fecha de salida</label>
    <type>Date</type>
</CustomField>