force-app/main/default/objects/Case/fields/Fecha_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sysde__c</fullName>
    <description>Fecha SYSDE en la cual se cerró el caso de Retiros.</description>
    <label>Fecha Sysde</label>
    <type>Date</type>
</CustomField>