force-app/main/default/objects/Case/fields/FechaHoraOTP__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraOTP__c</fullName>
    <description>Almacena la fecha y hora de generación del OTP</description>
    <inlineHelpText>Almacena la fecha y hora de generación del OTP</inlineHelpText>
    <label>Fecha Hora OTP</label>
    <type>DateTime</type>
</CustomField>