force-app/main/default/objects/Case/fields/Finalizar_SLA__c.field-meta.xml
<CustomField>
    <fullName>Finalizar_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Finalizar SLA?</label>
    <type>Checkbox</type>
</CustomField>