force-app/main/default/objects/Case/fields/Finalizar_SLA_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Finalizar_SLA_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Finalizar SLA Aprobación?</label>
    <type>Checkbox</type>
</CustomField>