force-app/main/default/objects/Case/fields/FPC_Asunto__c.field-meta.xml
<CustomField>
    <fullName>FPC_Asunto__c</fullName>
    <label>Asunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reposición Carnet</fullName>
                <label>Reposición de Carnet</label>
            </value>
            <value>
                <fullName>Problemas Sitio Transaccional</fullName>
            </value>
            <value>
                <fullName>Problemas en la Aplicación Móvil</fullName>
            </value>
            <value>
                <fullName>Problemas Interbanca</fullName>
            </value>
            <value>
                <fullName>Retiro Manual</fullName>
            </value>
            <value>
                <fullName>Consulta Seguro Vida</fullName>
                <label>Consulta Seguro de Vida</label>
            </value>
            <value>
                <fullName>No se Realizó Aporte</fullName>
            </value>
            <value>
                <fullName>Problemas Caja Banco</fullName>
            </value>
            <value>
                <fullName>Actualización Información</fullName>
            </value>
            <value>
                <fullName>Modificación Aportes</fullName>
            </value>
            <value>
                <fullName>Estado Cuenta</fullName>
            </value>
            <value>
                <fullName>Constancia</fullName>
            </value>
            <value>
                <fullName>Reversiones</fullName>
            </value>
            <value>
                <fullName>Varios Débitos</fullName>
            </value>
            <value>
                <fullName>Consulta Proceso Retiro</fullName>
            </value>
            <value>
                <fullName>Consulta Préstamos</fullName>
            </value>
            <value>
                <fullName>Consulta Cuenta</fullName>
            </value>
            <value>
                <fullName>Consulta de correo electrónico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>