force-app/main/default/objects/Case/fields/FPC_ContarNumeroPrestamo__c.field-meta.xml
<CustomField>
    <fullName>FPC_ContarNumeroPrestamo__c</fullName>
    <label>Contar Numero de Prestamo</label>
    <summaryFilterItems>
        <field>Detalle_caso__c.Numero_Prestamo__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Detalle_caso__c.Caso__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>