force-app/main/default/objects/Case/fields/FrecuenciaEnvioEDC__c.field-meta.xml
<CustomField>
    <fullName>FrecuenciaEnvioEDC__c</fullName>
    <label>Frecuencia de Envío EDC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FrecuenciaEnvioEDC</valueSetName>
    </valueSet>
</CustomField>