force-app/main/default/objects/Case/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <label>Identificacion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>