force-app/main/default/objects/Case/fields/Limite_exoneracion_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Limite_exoneracion_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limite de exoneración aprobado</label>
    <type>Checkbox</type>
</CustomField>