force-app/main/default/objects/Case/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Pais de Nacimiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>