force-app/main/default/objects/Case/fields/Milestone_operaciones__c.field-meta.xml
<CustomField>
    <fullName>Milestone_operaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para lanzar el Milestone de operaciones</description>
    <inlineHelpText>Check para lanzar el Milestone de operaciones</inlineHelpText>
    <label>Milestone operaciones</label>
    <type>Checkbox</type>
</CustomField>