force-app/main/default/objects/Case/fields/ModificacionCamposCriticos__c.field-meta.xml
<CustomField>
    <fullName>ModificacionCamposCriticos__c</fullName>
    <formula>AND(RecordType.DeveloperName = &quot;Actualizacion_informacion&quot;, 
OR ( 
!ISBLANK( Nombre_Cliente__c ),
!ISBLANK( Segundo_nombre__c ),
!ISBLANK( Apellidos__c ),
!ISBLANK( Segundo_apellido__c ),
!ISPICKVAL(Tipo_Identificacion__c,&apos;&apos;),
!ISBLANK( Identificacion__c ),
!ISBLANK(  Fecha_Nacimiento__c  ),
!ISPICKVAL(Sexo__c,&apos;&apos;),
 AprobacionBeneficiarios__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modificación campos críticos</label>
    <type>Checkbox</type>
</CustomField>