force-app/main/default/objects/Case/fields/Monto_Comision__c.field-meta.xml
<CustomField>
    <fullName>Monto_Comision__c</fullName>
    <label>Monto de Comisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>