force-app/main/default/objects/Case/fields/Monto_compromiso_aporte__c.field-meta.xml
<CustomField>
    <fullName>Monto_compromiso_aporte__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto de compromiso de aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>