force-app/main/default/objects/Case/fields/Mostrar_Asignar__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Asignar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Asignar</label>
    <type>Checkbox</type>
</CustomField>