force-app/main/default/objects/Case/fields/Mostrar_Saldo_a_la_fecha__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Saldo_a_la_fecha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Saldo a la fecha</label>
    <type>Checkbox</type>
</CustomField>