force-app/main/default/objects/Case/fields/mostrar_tasa_cambio__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_tasa_Cambio__c</fullName>
    <label>Mostrar_tasa_Cambio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>