force-app/main/default/objects/Case/fields/Motivo_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cambio__c</fullName>
    <label>Motivo del caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceptación de Nueva Promoción</fullName>
            </value>
            <value>
                <fullName>A solicitud del cliente</fullName>
            </value>
            <value>
                <fullName>Cambio de Patrono</fullName>
                <default>true</default>
                <label>Cambio de Patrono</label>
            </value>
            <value>
                <fullName>Error en la Afiliación</fullName>
            </value>
            <value>
                <fullName>Retención</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>