force-app/main/default/objects/Case/fields/Motivo_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copia de identidad no legible</fullName>
            </value>
            <value>
                <fullName>Información incompleta en la solicitud</fullName>
            </value>
            <value>
                <fullName>Firma no coincide con firma registrada en el banco</fullName>
            </value>
            <value>
                <fullName>Datos del cliente no coinciden con la cuenta de ahorro del banco</fullName>
            </value>
            <value>
                <fullName>Número de cuenta de ahorro incompleta</fullName>
            </value>
            <value>
                <fullName>Número de tarjeta incompleta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>