force-app/main/default/objects/Case/fields/N_Veces_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>N_Veces_Rechazado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>N° de Veces Rechazado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>